--- a/for_educators.html
+++ b/for_educators.html
@@ -58,7 +58,7 @@
   <main>
     <div class='container'>
 
-      <!-- Row 1 -->
+      <!-- Content Row 1 -->
       <div class="row align-items-center paddedRow">
         <div class="col-md-6">
           <h1> All the tools you need to teach digital literacy, 100% free.</h1>
@@ -77,21 +77,21 @@
         </div>
       </div>
 
-      <!-- Row 2 -->
+      <!-- Content Row 2 -->
       <div class="row align-items-center paddedRow">
         <div class="col-md-6">
           <img class="educators_image" src="img/educators_2.png">
         </div>
         <div class='col-md-6'>
           <h1> Lessons for 21st-century students</h1>
-          <h4> TestDrive simulates a safe environment that still <b>feels real</b>
-            to what students will actually see when they enter social media.
-            Totally lit, fam.
+          <h4> TestDrive simulates a safe environment that still <b>feels
+            real</b> to what students will actually see when they enter social
+            media. Totally lit, fam.
           </h4>
         </div>
       </div>
 
-      <!-- Row 3 -->
+      <!-- Content Row 3 -->
       <div class="row align-items-center paddedRow">
         <div class="col-md-6">
           <h1> A space for reflection and open conversation</h1>
@@ -132,12 +132,14 @@
 
       <!-- Got More Questions Section -->
 
+      <!-- Title -->
       <div class="row justify-content-center">
         <div class="col text-center">
           <h1> Still have more questions? </h1>
         </div>
       </div>
 
+      <!-- Subtitle  -->
       <div class="row justify-content-center">
         <div class="col-sm-4 text-center">
           <h4>
@@ -146,6 +148,7 @@
         </div>
       </div>
 
+      <!-- Button -->
       <div class="row justify-content-center" style="padding-bottom:2em;">
         <div class="col d-flex justify-content-center">
           <button type="button" class="nicelyRoundedButton" onclick="document.location='faq.html'">
