--- a/for_parents.html
+++ b/for_parents.html
@@ -59,7 +59,7 @@
   <main>
   <div class='container'>
 
-    <!-- Row 1 -->
+    <!-- Content Row 1 -->
     <div class="row align-items-center paddedRow">
       <div class="col-md-6">
         <h1> Take your kids on a test drive for social media.</h1>
@@ -67,17 +67,18 @@
           by themselves, but we encourage parents to try out and discuss
           TestDrive with their children.
         </h4>
-        <button type="button" class="nicelyRoundedButton"
-        onclick="document.location='testdriveguide.pdf'" target="_blank">
-          Try it out
-        </button>
+        <a href="https://app.socialmediatestdrive.org/" target="_blank">
+          <button type="button" class="nicelyRoundedButton">
+            Try it out
+          </button>
+        </a>
       </div>
       <div class='col-md-6'>
         <img class="educators_image" src="img/parents_1.svg">
       </div>
     </div>
 
-    <!-- Row 2 -->
+    <!-- Content Row 2 -->
     <div class="row align-items-center paddedRow">
       <div class="col-md-6">
         <img class="parents_2" src="img/parents_2.png">
@@ -91,7 +92,7 @@
       </div>
     </div>
 
-    <!-- Row 3 -->
+    <!-- Content Row 3 -->
     <div class="row align-items-center paddedRow">
       <div class="col-md-6">
         <h1> Teach social media skills, risk-free.</h1>
@@ -111,12 +112,15 @@
     </div>
 
     <!-- Got More Questions Section -->
+
+    <!-- Title -->
     <div class="row justify-content-center">
       <div class="col text-center">
         <h1> Still have more questions? </h1>
       </div>
     </div>
 
+    <!-- Subtext -->
     <div class="row justify-content-center">
       <div class="col-sm-4 text-center">
         <h4>
@@ -125,6 +129,7 @@
       </div>
     </div>
 
+    <!-- Button -->
     <div class="row justify-content-center">
       <div class="col d-flex justify-content-center">
         <button type="button" class="nicelyRoundedButton" onclick="document.location='faq.html'">
