--- a/modules.html
+++ b/modules.html
@@ -22,7 +22,6 @@
     <title>TestDrive</title>
 </head>
 <body>
-  <!-- REDUNDANT, DELETE ONCE SERVER SET UP/FIXED -->
   <header>
     <nav class="navbar navbar-expand-lg navbar-light">
 
@@ -110,9 +109,11 @@
 
             <div class="carousel-inner">
 
-              <!-- page 1 -->
+              <!-- Carousel Page 1 (full, do not add more modules here) -->
               <div class="carousel-item active">
                 <div class="card-deck">
+
+                  <!-- How To Be An Upstander -->
                   <div class="col-md-6 col-lg-4 d-flex justify-content-center moduleColumn">
                     <div class="card" style="width: 18rem;">
                       <a href="https://app.socialmediatestdrive.org/intro/cyberbullying" class="card-text" target="_none">
@@ -147,6 +148,8 @@
                       </div>
                     </div>
                   </div>
+
+                  <!-- Is It Private Information? -->
                   <div class="col-md-6 col-lg-4 d-flex justify-content-center moduleColumn">
                     <div class="card" style="width: 18rem;">
                       <a href="https://app.socialmediatestdrive.org/intro/safe-posting" class="card-text" target="_none">
@@ -180,6 +183,8 @@
                       </div>
                     </div>
                   </div>
+
+                  <!-- Shaping Your Digital Footprint -->
                   <div class="col-md-6 col-lg-4 d-flex justify-content-center moduleColumn">
                     <div class="card" style="width: 18rem;">
                       <a href="https://app.socialmediatestdrive.org/intro/digfoot" class="card-text" target="_none">
@@ -213,6 +218,8 @@
                       </div>
                     </div>
                   </div>
+
+                  <!-- Online Identities -->
                   <div class="col-md-6 col-lg-4 d-flex justify-content-center moduleColumn">
                     <div class="card" style="width: 18rem;">
                       <a href="https://app.socialmediatestdrive.org/intro/presentation" class="card-text" target="_none">
@@ -246,6 +253,8 @@
                       </div>
                     </div>
                   </div>
+
+                  <!-- Social Media Privacy -->
                   <div class="col-md-6 col-lg-4 d-flex justify-content-center moduleColumn">
                     <div class="card" style="width: 18rem;">
                       <a href="https://app.socialmediatestdrive.org/intro/privacy" class="card-text" target="_none">
@@ -277,6 +286,8 @@
                       </div>
                     </div>
                   </div>
+
+                  <!-- News in Social Media -->
                   <div class="col-md-6 col-lg-4 d-flex justify-content-center moduleColumn">
                     <div class="card" style="width: 18rem;">
                       <a href="https://app.socialmediatestdrive.org/intro/digital-literacy" class="card-text" target="_none">
@@ -315,9 +326,11 @@
                 </div>
               </div>
 
-              <!-- page 2 -->
+              <!-- Carousel Page 2 -->
               <div class="carousel-item">
                 <div class="card-deck">
+
+                  <!-- Targeted Advertising -->
                   <div class="col-md-6 col-lg-4 d-flex justify-content-center moduleColumn">
                     <div class="card" style="width: 18rem;">
                       <a href="https://app.socialmediatestdrive.org/intro/targeted" class="card-text" target="_none">
@@ -347,6 +360,8 @@
                       </div>
                     </div>
                   </div>
+
+                  <!-- Healthy Social Media Habits -->
                   <div class="col-md-6 col-lg-4 d-flex justify-content-center moduleColumn">
                     <div class="card" style="width: 18rem;">
                       <a href="https://app.socialmediatestdrive.org/intro/habits" class="card-text" target="_none">
@@ -380,13 +395,15 @@
                       </div>
                     </div>
                   </div>
+
+                  <!-- Scams and Phishing -->
                   <div class="col-md-6 col-lg-4 d-flex justify-content-center moduleColumn">
                     <div class="card" style="width: 18rem;">
                       <a href="https://app.socialmediatestdrive.org/intro/phishing" class="card-text" target="_none">
                         <div class="container cardImgContainer">
                           <img class="card-img-top" id="heightReference" src="/img/phishing.png" alt="Phishing">
                           <div class="card-img-overlay">
-                            <span class="card-title moduleCardTitle">Phishing</span>
+                            <span class="card-title moduleCardTitle">Scams and Phishing</span>
                           </div>
                         </div>
                       </a>
@@ -411,17 +428,17 @@
                       </div>
                     </div>
                   </div>
+
                 </div>
               </div>
-
             </div>
-
           </div>
-
         </div>
       </div>
 
       <!-- mobile view, no carousel -->
+
+      <!-- How to Be an Upstander -->
       <div class="row d-sm-block d-md-none">
         <div class="card" style="width: 18rem;">
           <a href="https://app.socialmediatestdrive.org/intro/cyberbullying" class="card-text" target="_none">
@@ -456,6 +473,8 @@
           </div>
         </div>
       </div>
+
+      <!-- Is It Private Information? -->
       <div class="row paddedTop d-sm-block d-md-none">
         <div class="card" style="width: 18rem;">
           <a href="https://app.socialmediatestdrive.org/intro/safe-posting" class="card-text" target="_none">
@@ -489,6 +508,8 @@
           </div>
         </div>
       </div>
+
+      <!-- Shaping Your Digital Footprint -->
       <div class="row paddedTop d-sm-block d-md-none">
         <div class="card" style="width: 18rem;">
           <a href="https://app.socialmediatestdrive.org/intro/digfoot" class="card-text" target="_none">
@@ -522,6 +543,8 @@
           </div>
         </div>
       </div>
+
+      <!-- Online Identities -->
       <div class="row paddedTop d-sm-block d-md-none">
         <div class="card" style="width: 18rem;">
           <a href="https://app.socialmediatestdrive.org/intro/presentation" class="card-text" target="_none">
@@ -555,6 +578,8 @@
           </div>
         </div>
       </div>
+
+      <!-- Social Media Privacy -->
       <div class="row paddedTop d-sm-block d-md-none">
         <div class="card" style="width: 18rem;">
           <a href="https://app.socialmediatestdrive.org/intro/privacy" class="card-text" target="_none">
@@ -586,6 +611,8 @@
           </div>
         </div>
       </div>
+
+      <!-- News in Social Media -->
       <div class="row paddedTop d-sm-block d-md-none">
         <div class="card" style="width: 18rem;">
           <a href="https://app.socialmediatestdrive.org/intro/digital-literacy" class="card-text" target="_none">
@@ -619,6 +646,8 @@
           </div>
         </div>
       </div>
+
+      <!-- Targeted Advertising -->
       <div class="row paddedTop d-sm-block d-md-none">
         <div class="card" style="width: 18rem;">
           <a href="https://app.socialmediatestdrive.org/intro/targeted" class="card-text" target="_none">
@@ -648,6 +677,8 @@
           </div>
         </div>
       </div>
+
+      <!-- Healthy Social Media Habits -->
       <div class="row paddedTop d-sm-block d-md-none">
         <div class="card" style="width: 18rem;">
           <a href="https://app.socialmediatestdrive.org/intro/habits" class="card-text" target="_none">
@@ -679,13 +710,15 @@
           </div>
         </div>
       </div>
+
+      <!-- Scams and Phishing -->
       <div class="row paddedTop d-sm-block d-md-none">
         <div class="card" style="width: 18rem;">
           <a href="https://app.socialmediatestdrive.org/intro/phishing" class="card-text" target="_none">
             <div class="container cardImgContainer">
               <img class="card-img-top" id="heightReference" src="/img/phishing.png" alt="Phishing">
               <div class="card-img-overlay">
-                <span class="card-title moduleCardTitle">Phishing</span>
+                <span class="card-title moduleCardTitle">Scams and Phishing</span>
               </div>
             </div>
           </a>
@@ -728,7 +761,7 @@
       </div>
     </div>
 
-    <!-- Button -->
+    <!-- Contact Button -->
     <div class="row justify-content-center" style="padding-bottom:2em;">
       <div class="col d-flex justify-content-center">
         <a href="mailto:socialmediatestdrive@gmail.com">
