--- a/faq.html
+++ b/faq.html
@@ -60,12 +60,16 @@
   <main>
     <div class='container'>
 
+      <!-- Title -->
       <div class="row justify-content-center" style="padding-top:3em; padding-bottom:15px;">
         <div class="col text-center">
           <h1> Got Questions? </h1>
         </div>
       </div>
+
+      <!-- Subject Tabs -->
       <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist" style="border-bottom: 1px solid #DCDCDC;">
+        <!-- Tab 1 -->
         <li class="nav-item">
           <a class="nav-link active" id="pills-home-tab" data-toggle="pill"
           href="#pills-home" role="tab" aria-controls="pills-home"
@@ -73,6 +77,7 @@
             General
           </a>
         </li>
+        <!-- Tab 2 -->
         <li class="nav-item">
           <a class="nav-link" id="pills-profile-tab" data-toggle="pill"
           href="#pills-profile" role="tab" aria-controls="pills-profile"
@@ -80,6 +85,7 @@
             Educators
           </a>
         </li>
+        <!-- Tab 3 -->
         <li class="nav-item">
           <a class="nav-link" id="pills-contact-tab" data-toggle="pill"
           href="#pills-contact" role="tab" aria-controls="pills-contact"
@@ -90,11 +96,11 @@
       </ul>
       <div class="tab-content" id="pills-tabContent">
 
-        <!-- General -->
+        <!-- Tab 1 Content -->
         <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">
           <div class="container">
 
-            <!-- First row, general -->
+            <!-- First row, tab 1 -->
             <div class="row paddedRow">
               <div class="col-md-6 leftSide">
                 <h3 class="questionTitle">What is Social Media TestDrive?</h3>
@@ -128,7 +134,7 @@
               </div>
             </div>
 
-            <!-- Second row, general -->
+            <!-- Second row, tab 1 -->
             <div class="row paddedRow">
               <div class="col-md-6 leftSide">
                 <h3 class="questionTitle">How do TestDrive lessons work?</h3>
@@ -164,7 +170,7 @@
               </div>
             </div>
 
-            <!-- Third row, general -->
+            <!-- Third row, tab 1 -->
             <div class="row paddedRow">
               <div class="col-md-6 leftSide">
                 <h3 class="questionTitle">
@@ -204,11 +210,11 @@
           </div>
         </div>
 
-        <!-- Educators -->
+        <!-- Tab 2 Content -->
         <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab">
           <div class="container">
 
-            <!-- First row, educators -->
+            <!-- First row, tab 2 -->
             <div class="row paddedRow">
               <div class="col-md-6 leftSide">
                 <h3 class="questionTitle">
@@ -246,7 +252,7 @@
               </div>
             </div>
 
-            <!-- Second row, educators -->
+            <!-- Second row, tab 2 -->
             <div class="row paddedRow">
               <div class="col-md-6 leftSide">
                 <h3 class="questionTitle">
@@ -287,11 +293,11 @@
           </div>
         </div>
 
-        <!-- Parents -->
+        <!-- Tab 3 -->
         <div class="tab-pane fade" id="pills-contact" role="tabpanel" aria-labelledby="pills-contact-tab">
           <div class="container">
 
-            <!-- First row, parents -->
+            <!-- First row, tab 3 -->
             <div class="row paddedRow">
               <div class="col-md-6 leftSide">
                 <h3 class="questionTitle">
@@ -333,6 +339,9 @@
         </div>
       </div>
 
+      <!-- List-serv Section -->
+
+      <!-- Title -->
       <div class="container">
         <div class="row paddedTop justify-content-center">
           <div class="col text-center">
@@ -340,6 +349,7 @@
           </div>
         </div>
 
+        <!-- Subtext -->
         <div class="row justify-content-center">
           <div class="col-sm-4 text-center">
             <h4>
@@ -353,6 +363,7 @@
           </div>
         </div>
 
+        <!-- Button -->
         <div class="row justify-content-center" style="padding-bottom:2em;">
           <div class="col d-flex justify-content-center">
             <a href="mailto:TESTDRIVE-L-request@cornell.edu?Subject=Join" target="_top">
@@ -362,6 +373,7 @@
             </a>
           </div>
         </div>
+        
       </div>
   </main>
 
