--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
 </head>
 
 <body>
-  <!-- REDUNDANT, DELETE ONCE SERVER SET UP/FIXED -->
   <header>
     <nav class="navbar navbar-expand-lg navbar-light">
       <a href="index.html">
@@ -32,9 +31,9 @@
         Test<span class="brand">Drive</span>
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse"
-        data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-        aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
+      data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+      aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ml-auto">
@@ -58,18 +57,30 @@
 
   <main>
     <div class="section1 container">
+
+      <!-- Top Content Row -->
       <div class="row paddedRow align-items-center">
         <div id="intro" class="col-md-6">
-          <h1>Practice digital literacy through a <span class="blue_accent">social media simulation.</span></h1>
-          <h4>Social Media TestDrive lets young people practice digital citizenship skills in a simulated, realistic social media environment.</h4>
-          <button class="nicelyRoundedButton" type="button" onclick="window.location.href = 'modules.html';">View Modules </button>
+          <h1>
+            Practice digital literacy through a <span class="blue_accent">social
+            media simulation.</span>
+          </h1>
+          <h4>
+            Social Media TestDrive lets young people practice digital
+            citizenship skills in a simulated, realistic social media
+            environment.
+          </h4>
+          <button class="nicelyRoundedButton" type="button"
+          onclick="window.location.href = 'modules.html';">
+            View Modules
+          </button>
         </div>
         <div id="home_graphic" class="col-md-6">
           <img id="home_img" src="img/home_1.svg" alt="home graphic">
         </div>
       </div>
 
-      <!-- Row: Our Mission -->
+      <!-- Item Trio Title -->
       <div class="row justify-content-center">
         <div class="col-md-6 text-center">
           <h1>Our Vision</h1>
@@ -80,8 +91,9 @@
         </div>
       </div>
 
-      <!-- Row: Mission Icons -->
+      <!-- Three Mission Items -->
       <div class="row justify-content-center" style="padding-bottom:3em;">
+        <!-- Item 1 -->
         <div class="col-md-4 text-center">
           <img class="trioImage" src="img/home_safety.svg">
           <h1 class="trioTitle">Safety first</h1>
@@ -90,6 +102,7 @@
             real-life consequences.
           </h4>
         </div>
+        <!-- Item 2 -->
         <div class="col-md-4 text-center">
           <img class="trioImage" src="img/home_essential.svg">
           <h1 class="trioTitle">Essential topics</h1>
@@ -98,6 +111,7 @@
             online behavior relevant to today's kids.
           </h4>
         </div>
+        <!-- Item 3 -->
         <div class="col-md-4 text-center">
           <img class="trioImage" src="img/home_free.svg">
           <h1 class="trioTitle">100% free</h1>
@@ -108,15 +122,18 @@
         </div>
       </div>
 
-      <!-- Row 1 -->
+      <!-- Content Row 1 -->
       <div class="row align-items-center paddedRow">
         <div class="col-md-6">
-          <h1>Education for the <span class="blue_accent">digital age</span></h1>
+          <h1>
+            Education for the <span class="blue_accent">digital age</span>
+          </h1>
           <h4> TestDrive simulates <b>realistic digital dilemmas and scenarios</b>
             that young people may encounter as they enter the social media world.
           </h4>
           <h4> Each lesson teaches <b>essential digital citizenship concepts</b>,
-            covering topics such as privacy, online identities, cyberbullying, and more.
+            covering topics such as privacy, online identities, cyberbullying,
+            and more.
           </h4>
 
         </div>
@@ -125,33 +142,43 @@
         </div>
       </div>
 
-      <!-- Row 2 -->
+      <!-- Content Row 2 -->
       <div class="row align-items-center paddedRow">
         <div class="col-md-6">
           <img class="margined-right home_product2" src="img/home_3.png">
         </div>
         <div class='col-md-6'>
-          <h1> Prepare kids for the <span class="blue_accent">online world</span></h1>
-          <h4> TestDrive is targeted for <b>middle school-aged youth</b> (ages 9–13)
-            who are likely enter into the social media world <b>in the near future</b>.
+          <h1>
+            Prepare kids for the <span class="blue_accent">online world</span>
+          </h1>
+          <h4>
+            TestDrive is targeted for <b>middle school-aged youth</b> (ages
+            9–13) who are likely enter into the social media world <b>in the
+            near future</b>.
           </h4>
-          <h4> TestDrive lessons can be done individually, in pairs, or as a
+          <h4>
+            TestDrive lessons can be done individually, in pairs, or as a
             guided group activity in educational settings to facilitate learning
-             outcomes.
+            outcomes.
           </h4>
         </div>
       </div>
 
-      <!-- Row 3 -->
+      <!-- Content Row 3 -->
       <div class="row align-items-center paddedRow">
         <div class="col-md-6">
-          <h1>A trusted resource for the classroom</h1>
-          <h4> Educators can use TestDrive to <b>engage with students</b> and spark
+          <h1>
+            A trusted resource for the classroom
+          </h1>
+          <h4>
+            Educators can use TestDrive to <b>engage with students</b> and spark
             conversations around what it means to be prosocial and ethical
             citizens online.
           </h4>
-          <h4> TestDrive’s lessons are aligned with <b>Common Sense Education</b> to
-            provide a curriculum that covers emerging topics in digital literacy.
+          <h4>
+            TestDrive’s lessons are aligned with <b>Common Sense Education</b>
+            to provide a curriculum that covers emerging topics in digital
+            literacy.
           </h4>
 
         </div>
@@ -160,14 +187,17 @@
         </div>
       </div>
 
-      <!-- Row 4 -->
+      <!-- Content Row 4 -->
       <div class="row align-items-center paddedRow">
         <div class="col-md-6">
           <img class="home_parents" src="img/home_parents.svg">
         </div>
         <div class='col-md-6'>
-          <h1> Great for parents, too</h1>
-          <h4> TestDrive lessons can be completed from the <b>comfort of your own
+          <h1>
+            Great for parents, too
+          </h1>
+          <h4>
+            TestDrive lessons can be completed from the <b>comfort of your own
             home</b>, and we encourage parents to try it out with their children.
           </h4>
           <h4> We <b>do not store or collect</b> any personal or identifying
@@ -178,22 +208,9 @@
 
     </div>
 
-    <!-- <div class="container">
-      <div class="row paddedRow justify-content-center">
-        <div class="col text-center">
-          <h1> Ready to get started? </h1>
-        </div>
-      </div>
+    <!-- Join List-serv Section -->
 
-      <div class="row justify-content-center" style="padding-bottom:2em;">
-        <div class="col d-flex justify-content-center">
-          <button type="button" class="nicelyRoundedButton" onclick="window.location.href = 'modules.html';">
-            Take a TestDrive
-          </button>
-        </div>
-      </div>
-    </div> -->
-
+    <!-- Title -->
     <div class="container">
       <div class="row paddedTop justify-content-center">
         <div class="col text-center">
@@ -201,6 +218,7 @@
         </div>
       </div>
 
+      <!-- Subtext -->
       <div class="row justify-content-center">
         <div class="col-sm-4 text-center">
           <h4>
@@ -208,12 +226,13 @@
             etc.
           </h4>
           <h4>
-            Click the button below and press "Send" to join (leave
-            the message blank).
+            Click the button below and press "Send" to join (leave the message
+            blank).
           </h4>
         </div>
       </div>
 
+      <!-- Join List-serv Button -->
       <div class="row justify-content-center" style="padding-bottom:2em;">
         <div class="col d-flex justify-content-center">
           <a href="mailto:TESTDRIVE-L-request@cornell.edu?Subject=Join" target="_top">
