Media and press page complete

--- a/faq.html
+++ b/faq.html
@@ -373,7 +373,7 @@
             </a>
           </div>
         </div>
-        
+
       </div>
   </main>
 
@@ -387,7 +387,7 @@
           <a href="#" class="footer-link">Team</a>
         </div>
         <div class="col-auto">
-          <a href="#" class="footer-link">Press</a>
+          <a href="press.html" class="footer-link">Press</a>
         </div>
         <div class="col-auto">
           <a href="terms.html" class="footer-link">Terms & Copyright</a>
