Team page completed

--- a/team.html
+++ b/team.html
@@ -1,51 +1,209 @@
 <!DOCTYPE html>
 
 <html>
-    <head>
-      <title>TestDrive</title>
-      <link rel="stylesheet" type="text/css" href="../style.css">
-      <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:600,700|Open+Sans" rel="stylesheet">
-      <link rel="shortcut icon" href="../img/logo.ico" type="image/x-icon" />
-      <meta name='twitter:card' content="summary">
-      <meta name='twitter:title' content="Social Media TestDrive">
-      <meta name='twitter:description' content="Welcome to the Social Media TestDrive official website!">
-      <meta name='twitter:image' content='https://dhpd030vnpk29.cloudfront.net/squareLogo.png'>
-      <meta property='og:url' content='https://socialmediatestdrive.org/team.html'>
-      <meta property='og:title' content="Social Media TestDrive">
-      <meta property='og:description' content='Welcome to the Social Media TestDrive official website!'>
-      <meta property='og:image' content='https://dhpd030vnpk29.cloudfront.net/squareLogo.png'>  
-              
-    </head>
-    <body>
-      <div id="topNav"></div>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="styles/all.css" media="all">
+  <link rel="stylesheet" type="text/css" href="styles/team.css" media="all">
+  <link rel="stylesheet" type="text/css" href="styles/header.css" media="all">
+  <link rel="stylesheet" type="text/css" href="styles/footer.css" media="all">
 
-      <div class="lessonheader"><h1 class="lessontitle">Meet the Team</h1></div>
-      <div class="lessoncontent">
-        <p>TestDrive is developed by the Cornell Social Media Lab, with generous support from the Morgan Family Foundation, Program for Research on Youth Development and Engagement (PRYDE), Cornell's Bronfenbrenner Center for Translational Research (BCTR), and the National Science Foundation.</p>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-145467622-3"></script>
+  <script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-        <p class="lessonsubheader">People</p>
-        <p><b>Program Director: Dr. Natalie Bazarova </b></p>
-        <p>Dr. Bazarova is an Associate Professor in the Department of Communication at Cornell University. As Director of the Social Media Lab, she studies how people communicate and relate to one another in social media. Her recent research focuses on online self-disclosure and privacy, with some of her new papers examining disclosure motivations, interpretations, language of disclosure, and its social and psychological effects. </p>
-        <p><b>Program Advisor: Dr. Janis Whitlock </b></p>
-        <p>Dr. Whitlock is a Research Scientist at Cornell's Bronfenbrenner Center for Translational Research, and the Director of The Cornell Research Program on Self-Injury and Recovery. She is interested in the social, cultural, and contextual factors that influence adolescent development and identity formation. </p>
-        <p><b>Technical Director: Dr. Dominic DiFranzo</b></p>
-        <p>Dr. DiFranzo is a postdoctoral associate in the Social Media Lab. He specializes in creating research-based technological interventions to social issues. He oversees the technical development and direction for the TestDrive platform.</p>
-        <p><b>Research Director: Dr. Yoon Hyung Choi</b></p>
-        <p>Dr. Choi is a postdoctoral associate in the Social Media Lab. She coordinates research, curriculum/content development, and outreach for Social Media TestDrive.</p>
-        <p><b>Evaluation Director: Amanda Purington</b></p>
-        <p>Amanda is the Director of Evaluation and Research at ACT for Youth and a graduate student in the Department of Communication at Cornell University. She is responsible for the assessment and evaluation of Social Media TestDrive.</p>
-        <p><b>Applications Programmer: Anna Spring</b></p>
-        <p>Anna is in charge of the software development and technological operations of the Social Media TestDrive platform.</p>
-        <p><b>Curriculum and Content Development</b></p>
-        <p>These Social Media Lab research assistants helped with curriculum development and content creation for TestDrive: Carmen Chan, Richa Deshpande, Danielle Freedman, Brenna Garcia, Yanni Kaldis, Molly Nagel, Giesha Nunez, Alex Rauter, Emily Schemerhorn, Yutong Zhou, Erin Chen, Kelly Stone, Colton Zuvich, and Ashley Win.</p>
-        <p><b>Website Development</b></p>
-        <p>These student web developers created the socialmediatestdrive.org website: Nika Ablao, Carina Crabbe, Sierra Stone, Cindy Xu, and Hyun Seo (Lucy) Lee.</p>
-        <p class="lessonsubheader">Sponsors</p>
-        <p>Social Media TestDrive is supported by the generosity of the Morgan Family Foundation, Bronfenbrenner Center for Translational Research, and National Science Foundation award #1405634. </p>
+  gtag('config', 'UA-145467622-3');
+  </script>
+</head>
+
+<body>
+  <header>
+    <nav class="navbar navbar-expand-lg navbar-light">
+
+      <a href="index.html">
+        <img src="/img/testDriveLogo.svg" width="110px" height="110px" class="d-inline-block align-top testDriveLogo" alt="">
+      </a>
+      <a class="navbar-brand fancy d-none d-md-inline-block" href="index.html">
+        Test<span class="brand">Drive</span>
+      </a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse"
+        data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+        aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="modules.html">Lessons</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="for_educators.html">For Educators</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="for_parents.html">For Parents</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="faq.html">FAQ</a>
+          </li>
+        </ul>
+
+      </div>
+    </nav>
+  </header>
+
+  <main>
+    <div class='container-fluid'>
+      <div class='row justify-content-center teamPageTitleRow'>
+        <h1 class="teamPageTitleText">
+          Team
+        </h1>
       </div>
 
-      <div id="bottomNav"></div>
-      <script src="nav.js"></script>
+      <!-- Subtext -->
+      <div class="row justify-content-center">
+        <div class="col-md-6 col-lg-4 text-center teamSubtitle">
+          <h4 class="teamText">
+            TestDrive is built from a multidisciplinary team of researchers,
+            designers, developers, and more. We are all passionate about helping
+            kids learn social media.
+          </h4>
+        </div>
+      </div>
 
-    </body>
+
+      <div class='row teamRow'>
+        <h3 class="teamSubheader text-center">
+          Directors & Core Team
+        </h3>
+      </div>
+      <div class='row teamRow' style="padding-top:3em; padding-bottom:15px;">
+        <div class="col-lg-6 addColumnPadding">
+
+          <p class="teamText">
+            Program Director: Dr. Natalie Bazarova. Dr. Bazarova is an Associate
+            Professor in the Department of Communication and the Director of the
+            Social Media Lab at Cornell University.
+          </p>
+          <p class="teamText">
+            Program Advisor: Dr. Janis Whitlock. Dr. Whitlock is a Research
+            Scientist at Cornell's Bronfenbrenner Center for Translational
+            Research and the Director of The Cornell Research Program on
+            Self-Injury and Recovery.
+          </p>
+          <p class="teamText">
+            Content Director and Project Manager: Dr. Yoon Hyung Choi. Dr. Choi
+            is a Postdoctoral Associate in the Department of Communication at
+            Cornell University.
+          </p>
+        </div>
+
+        <div class="col-lg-6 addColumnPadding">
+          <p class="teamText">
+            Technical Director: Dr. Dominic DiFranzo. Dr. DiFranzo is an
+            Assistant Professor in the Department of Computer Science &
+            Engineering at Lehigh University.
+          </p>
+          <p class="teamText">
+            Evaluation Director: Amanda Purington. Ms. Purington is the Director
+            of Evaluation and Research at ACT for Youth and a graduate student
+            in the Department of Communication at Cornell University.
+          </p>
+          <p class="teamText">
+              Application Developer: Anna Spring. Ms. Spring is an Applications
+              Programmer in the Department of Communication at Cornell
+              University.
+          </p>
+        </div>
+      </div>
+
+      <div class='row teamRow' style="padding-top:3em; padding-bottom:15px;">
+        <div class="col-lg-6 addColumnPadding">
+          <h3 class="teamSubheader">
+            Development and Testing of TestDrive Prototype
+          </h3>
+          <p class="teamText">
+            Jessie Taft, Rhoda Meador, Program for Research on Youth Development
+            and Engagement (PRYDE), Bronfenbrenner Center for Translational
+            Research, and NYS 4-H educators.
+          </p>
+        </div>
+
+        <div class="col-lg-6 addColumnPadding">
+          <h3 class="teamSubheader">
+            Website Development
+          </h3>
+          <p class="teamText">
+            Current Development: Michael Huang, Anna Spring
+          </p>
+          <p class="teamText">
+            Past Development: Nika Ablao, Carina Crabbe, Sierra Stone, Cindy Xu, Hyun Seo (Lucy)
+            Lee, and Dan Cosley.
+          </p>
+
+        </div>
+      </div>
+
+      <div class='row teamRow' style="padding-top:3em; padding-bottom:15px;">
+        <div class="col-lg-6 addColumnPadding">
+          <h3 class="teamSubheader">
+            Curriculum and Content Development
+          </h3>
+          <p class="teamText">
+            Carmen Chan, Richa Deshpande, Danielle Freedman, Brenna Garcia,
+            Yanni Kaldis, Molly Nagel, Giesha Nunez, Alex Rauter, Emily
+            Schemerhorn, Yutong Zhou, Erin Chen, Kelly Stone, Colton Zuvich, and
+            Ashley Win.
+          </p>
+        </div>
+
+        <div class="col-lg-6 addColumnPadding">
+          <h3 class="teamSubheader">
+            Sponsors
+          </h3>
+          <p class="teamText">
+            Social Media TestDrive is supported by the generosity of Becky and
+            Jim Morgan and National Science Foundation award #1405634.
+          </p>
+
+        </div>
+      </div>
+
+    </div>
+  </main>
+
+  <footer class="page-footer footerVerB">
+    <div class="container-fluid">
+      <div class="row align-items-center footerRow">
+        <div class="col-auto mr-auto">
+          <p class="footerLeftItem">Copyright&copy 2019 Social Media TestDrive</p>
+        </div>
+        <div class="col-auto">
+          <a href="team.html" class="footer-link">Team</a>
+        </div>
+        <div class="col-auto">
+          <a href="press.html" class="footer-link">Press</a>
+        </div>
+        <div class="col-auto">
+          <a href="terms.html" class="footer-link">Terms & Copyright</a>
+        </div>
+        <div class="col-auto align-items-center">
+          <a href="mailto:socialmediatestdrive@gmail.com" target="_top">
+            <button type="button" class="footerButton">
+              Contact us
+            </button>
+          </a>
+        </div>
+      </div>
+    </div>
+  </footer>
+
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+</body>
 </html>
