--- a/faq.html
+++ b/faq.html
@@ -384,7 +384,7 @@
           <p class="footerLeftItem">Copyright&copy 2019 Social Media TestDrive</p>
         </div>
         <div class="col-auto">
-          <a href="#" class="footer-link">Team</a>
+          <a href="team.html" class="footer-link">Team</a>
         </div>
         <div class="col-auto">
           <a href="press.html" class="footer-link">Press</a>
